# VoiceRecogniseTelegramBot

./: .gitignore  Cargo.toml  LICENSE  README.md  lockup_script.sh
.github/workflows/: dotnet.yml
src/: AppConfig.cs  AudioToWav.cs  Config.cs  CreateFiles.cs  Loger.cs  Program.cs  SettingsPathClass.cs  Stats.cs  TelegramAPI.cs  VoiceRecogniseBot.csproj  VoiceRecogniseBot.sln  WebUIAPI.cs  WhisperAPI.cs  app.config  app.debspec  app.manifest  appsetting.json  appsettings.json  bot_logic.rs  build.sh  config_parsing.rs  file.oga  get_chat_id.sh  get_file.rs  get_model_to_install.rs  language_model_declaration.rs  logger_init.rs  main.rs  recognise_message.rs
src/.config/: dotnet-tools.json
src/scripts/: postinst
