[package]
name = "RecogniseVoiceGroupBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = "0.24.1"
hound = "3.5.0"
ogg-opus = "0.1.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.158"
serde_json = "1.0.94"
whisper-rs = "0.4.0"



#default-features = false
