[package]
name = "RecogniseVoiceGroupBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
reqwest = "0.11.22"
error-chain = "0.12.4"
tempfile = "3.8.1"




#default-features = false
